# racks-on-tabs

./: LICENSE  README.md  pyproject.toml
racks_on_tabs/: __main__.py  app.py
racks_on_tabs/static/: app.css  app.js
racks_on_tabs/templates/: index.html  table_rows.html
tests/: test_racks_on_tabs.py
