[tool.poetry]
name = "racks-on-tabs"
version = "0.1.0"
description = "Command line app for browsing CSV files with row lazy loading."
license = "MIT"
authors = ["Alexander Juda <alexanderjuda@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alexjuda/racks-on-tabs"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
racks-on-tabs = 'racks_on_tabs.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
